update Dockerfile and database.yml

--- a/config/database.yml
+++ b/config/database.yml
@@ -11,3 +11,8 @@ default: &default
 development:
   <<: *default
   database: "first-rails"
+
+
+production:
+  <<: *default
+  database: "first-rails"
