--- a/config/database.yml
+++ b/config/database.yml
@@ -14,5 +14,12 @@ development:
 
 
 production:
-  <<: *default
-  database: "first-rails"
+  adapter: mysql2
+  encoding: utf8
+  username: uy1ow2grosdukyo4
+  password: R3nWKvM5En31wzhX9bgz
+  host: bnjkcj6ye2w1gef5y8p3-mysql.services.clever-cloud.com
+  port: 3306
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  timeout: 5000
+  database: "bnjkcj6ye2w1gef5y8p3"
